--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,27 @@
-FROM python:3.10-slim
+# FROM python:3.10-slim
 
-# System dependencies for OCR + PDF
+# # System dependencies for OCR + PDF
+# RUN apt-get update && apt-get install -y \
+#     tesseract-ocr \
+#     poppler-utils \
+#     libgl1 \
+#     && rm -rf /var/lib/apt/lists/*
+
+# WORKDIR /app
+
+# COPY requirements.txt .
+
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# COPY app ./app
+
+# EXPOSE 8000
+
+# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+
+FROM pytorch/pytorch:2.1.0-cpu as base
+
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
     poppler-utils \
@@ -10,11 +31,10 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app ./app
 
 EXPOSE 8000
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT}"]
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
