--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,7 +19,7 @@
 
 # CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
-FROM pytorch/pytorch:2.1.2-cpu-py3.10
+FROM pytorch/pytorch:latest
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     tesseract-ocr \
